refactor MovieFunctionalProgramming class: update main method visibility, remove unused methods, and enhance documentation